Cambió la url de absoluta a relativa en ejemplo2.html (en volver)

--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -16,7 +16,7 @@
         <li>Porro est quod unde repellat, accusamus vitae asperiores quaerat ad facere? At quidem laboriosam reprehenderit odio quaerat, rem molestias a possimus commodi eius facilis quam rerum quia perferendis voluptas quibusdam!</li>
         <li>Repellat perspiciatis provident nihil ea. Facilis nobis voluptates velit quis optio adipisci, maiores eum. Quis officiis quisquam veritatis deserunt similique quae ratione dolores tenetur tempora dolor laboriosam, repudiandae itaque magni!</li>
     </ul>
-    <a href="http://127.0.0.1:5500/ejemplo.html">volver</a>
+    <a href="ejemplo.html">volver</a>
 
 </body>
 </html>
