Agregados enlaces a ejemplo desde index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           <!-- Columna -->
           <div class="col-md-12">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti dicta sit autem ducimus doloremque quasi illo quo alias, molestias rerum, enim libero? Ea dicta blanditiis quia, ad hic eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima odio ad quos libero at corporis fugit, explicabo ipsa architecto provident et labore obcaecati nobis exercitationem quo autem modi, illo nihil!</p>
-                <a href="" class="btn btn-primary">enlace1</a><a href="" class="btn btn-danger">enlace2</a>
+                <a href="ejemplo.html" class="btn btn-primary">enlace1</a>
+                <a href="ejemplo2.html" class="btn btn-danger">enlace2</a>
           </div>
       </div>
     </div>
