--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <style>
        
     </style> -->
-    <!-- <link rel="stylesheet" href="estilo.css" /> -->
+    <link rel="stylesheet" href="estilo.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
