--- a/formulario.html
+++ b/formulario.html
@@ -17,7 +17,7 @@
     <h1>formulario</h1>
     <!--Se hace uso de los métodos GET y POST para envíar información del formulario-->
     <!--Action establece quien va a procesar la petición de datos--> 
-    <form action="javascript.html" method="POST">
+    <form action="javascript.html" method="GET">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12"><label for="nom" class="">Nombre:</label>   <input id="nom" name="nom" type="text" class="form-control" placeholder="Escribe tu nombre"></div>
