--- a/formulario2.html
+++ b/formulario2.html
@@ -33,7 +33,7 @@
             <!-- Genera un envío y querystring
             <button type="submit" class="btn btn-primary">Enviar1</button>-->
             <!-- Genera un envío y querystring -->
-            <button class="btn btn-danger" onclick="window.alert('Envíar2')">Enviar2</button>
+            <button class="btn btn-dark" onclick="window.alert('Envíar2')">Enviar2</button>
             <!-- Genera un envío y no hay querystring -->
             <a href="" class="btn btn-danger" onclick="window.alert('Envíar3')">enviar3</a>
             <!-- NO genera un envío y NO hay querystring -->
